# VideoProcessor

./: README.md  VideoProcessor.sln
VideoProcessor/: ApplicationGraph.cpp  ApplicationGraph.h  ApplicationGraphNodeSettingsUI.cpp  ApplicationGraphNodeSettingsUI.h  AudioSource.cpp  AudioSource.h  AudioSourceUI.cpp  AudioSourceUI.h  AudioVisualKernel.cu  AudioVisualKernel.h  BitField.cpp  BitField.h  CUDAStreamHandler.cpp  CUDAStreamHandler.h  CameraControl.cpp  CameraControl.h  CameraControlDiagnostic.cpp  CameraControlDiagnostic.h  CameraControlDiagnosticKernel.cu  CameraControlDiagnosticKernel.h  CameraControlDiagnosticUI.cpp  CameraControlDiagnosticUI.h  CameraControlUI.cpp  CameraControlUI.h  Clock.cpp  Clock.h  ComposeKernel.cu  ComposeKernel.h  DetectionSimulation3D.cpp  DetectionSimulation3D.h  DetectionSimulation3DUI.cpp  DetectionSimulation3DUI.h  EdgeFilterKernel.cu  EdgeFilterKernel.h  GPUAudioVisual.cpp  GPUAudioVisual.h  GPUAudioVisualUI.cpp  GPUAudioVisualUI.h  GPUComposer.cpp  GPUComposer.h  (+92 more)
obs/libobs/graphics/: image-file.c  image-file.h
obs/plugins/sm-source/: CMakeLists.txt  obs-sm-source.c  obs-sm-source.rc  resource.h  sm-source.vcxproj  sm-source.vcxproj.filters
